--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "fuse.js": "^7.1.0"
   }
 }
