--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "alpinejs": "^3.15.4",
     "fuse.js": "^7.1.0",
     "graphology": "^0.26.0",
     "graphology-layout": "^0.6.1",
