--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "eleventy --serve --quiet",
-    "build": "eleventy",
+    "build": "ELEVENTY_ENV=production eleventy",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -23,6 +23,7 @@
     "graphology": "^0.26.0",
     "graphology-layout": "^0.6.1",
     "graphology-layout-forceatlas2": "^0.10.1",
-    "graphology-layout-noverlap": "^0.4.2"
+    "graphology-layout-noverlap": "^0.4.2",
+    "html-minifier-terser": "^7.2.0"
   }
 }
